// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IFrame adapter can be constructed WITH attributes (1/2) 1`] = `
Object {
  "modelState": Object {
    "autoload": false,
    "border": true,
    "controls": Array [
      "zoom",
      "reload",
      "expand",
    ],
    "expandedSize": "full",
    "fit": "scroll",
    "height": null,
    "newWindow": true,
    "newWindowSrc": null,
    "src": "mock-src",
    "title": null,
    "type": "webpage",
    "width": null,
    "zoom": 1,
  },
}
`;

exports[`IFrame adapter can be constructed WITH attributes (2/2) 1`] = `
Object {
  "modelState": Object {
    "autoload": false,
    "border": false,
    "controls": Array [
      "reload",
      "expand",
    ],
    "expandedSize": "full",
    "fit": "scale",
    "height": null,
    "newWindow": false,
    "newWindowSrc": null,
    "src": "mock-src",
    "title": null,
    "type": "media",
    "width": null,
    "zoom": 1,
  },
}
`;

exports[`IFrame adapter can be constructed WITHOUT attributes 1`] = `
Object {
  "modelState": Object {
    "autoload": false,
    "border": false,
    "controls": Array [
      "reload",
      "expand",
    ],
    "expandedSize": "full",
    "fit": "scale",
    "height": null,
    "newWindow": false,
    "newWindowSrc": null,
    "src": null,
    "title": null,
    "type": "media",
    "width": null,
    "zoom": 1,
  },
}
`;

exports[`IFrame adapter can convert to JSON 1`] = `
Object {
  "content": Object {
    "autoload": false,
    "border": false,
    "controls": Array [
      "reload",
      "expand",
    ],
    "expandedSize": "full",
    "fit": "scale",
    "height": null,
    "newWindow": false,
    "newWindowSrc": null,
    "src": "mock-src",
    "title": null,
    "type": "media",
    "width": null,
    "zoom": 1,
  },
}
`;
